[[tool.poetry.source]]
name = "official-pypi"
url = "https://pypi.python.org/simple"

[tool.pdm]
[tool.pdm.build]
includes = ["src/arkologger", "LICENSE"]

[[tool.pdm.source]]
name = "official-pypi"
url = "https://pypi.python.org/simple"
verify_ssl = true
[project]
name = "arko-logger"
version = "0.1.3"
description = "A logger."
authors = [
    { name = "Karako", email = "karakohear@gmail.com" },
]
dependencies = [
    "msgspec>=0.18.5",
    "pydantic>=2.5.2",
    "rich>=13.7.0",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
